Fix bugs in examples. Comment local storage example.

--- a/js/exemplo7.html
+++ b/js/exemplo7.html
@@ -1,6 +1,6 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <meta charset="utf-8">
-<title>Exemplo 6</title>
+<title>Exemplo 7</title>
 <button id="btn1">Clique aqui.</button>
 <span id="msg1">A mensagem aparecerá aqui.</span>
 <script>
