Added audio and canvas examples.

--- a/localstorage/exemplo.html
+++ b/localstorage/exemplo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Local Storage</title>
-<!-- Coloque o jQuery aqui -->
+
+<script src="../jquery/jquery-1.6.4.min.js"></script>
 
 <input type="text" id="mensagem">
 
